Break line in lyrics to avoid horizontal scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .chords {
     font-family: monospace;
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 .lyrics {
